# roulier

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  roulier.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
roulier/: __init__.py  api.py  carrier.py  carrier_action.py  codec.py  exception.py  helpers.py  roulier.py  schema.py  tools.py  transport.py  ws_tools.py
roulier/carriers/: __init__.py
roulier/carriers/chronopost_fr/: __init__.py  api.py  carrier_action.py  decoder.py  encoder.py  transport.py
roulier/carriers/ciblex/: carrier.py  schema.py
roulier/carriers/colissimo_fr/: carrier.py  schema.py
roulier/carriers/dpd/: __init__.py  dpd.py  dpd_api.py  dpd_decoder.py  dpd_encoder.py  dpd_transport.py
roulier/carriers/dpd_fr/: __init__.py  api.py  carrier.py  carrier_action.py  decoder.py  dpd.py  dpd_api.py  dpd_common.py  dpd_decoder.py  dpd_encoder.py  dpd_transport.py  encoder.py  schema.py  transport.py
roulier/carriers/dpd_fr_soap/: __init__.py  api.py  carrier_action.py  decoder.py  encoder.py  transport.py
roulier/carriersv2/: __init__.py  api.py  helpers.py  schema.py
roulier/templates/: remove_empty_tags.xsl
roulier/tests/: conftest.py  credentials_demo.py  helpers.py  test_api.py  test_helpers.py
tests/: credential_demo.py  test-roulier-01.py  test-roulier-02.py  test-roulier-03-Colissimo-Domicile-(FR+Europe).py  test-roulier-04-Colissimo-Domicile-sign-(FR+Europe).py  test_roulier_gls_fr.py
(+285 files in other folders)
